Fixed cursor bug and added update() without args